--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,52 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+@{
+    ViewData["Title"] = "Home";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<header class="header">
+    <h1 class="display-4">Fag el-Gamous Excavation Project</h1>
+    <p class="lead">Discover the fascinating world of the Fag el-Gamous mummies and explore the wealth of data collected during over 25 years of archeological investigation.</p>
+    <a class="cta-button" href="your-link-to-burial-information-page" role="button">View Burial Information</a>
+</header>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <img src="https://media.cnn.com/api/v1/images/stellar/prod/181106093431-egypt-giza-pyramids-file.jpg?q=w_1347,h_1796,x_826,y_0,c_crop" alt="Greek Column" class="img-fluid">
+        </div>
+        <div class="col-md-8">
+            <h2 class="section-title">Project Overview</h2>
+
+            <p>
+                Welcome to the Fag el-Gamous Excavation Project website! Fag el-Gamous, meaning "Way of the Water Buffalo," is a significant cemetery in Egypt that has been undergoing archeological investigation for over 25 years, primarily by researchers from Brigham Young University. This extensive excavation has attracted global attention due to the fascinating insights gleaned from the study of the Fag el-Gamous mummies. You can find more detailed background information on this site in the academic article "Rethinking burial dates at a Graeco-Roman Cemetery: Fag el-Gamous, Fayoum, Egypt."
+            </p>
+            <p>
+                Throughout several years of research, our team has excavated more than 1,000 mummies and gathered data regarding each mummy's location, burial depth, physical orientation, hair color, wrapping textiles, sex, age, bone dimensions, accompanying items, and more. This data has been compiled in field notes, spreadsheets, and databases, and is supplemented by numerous photographs. Offsite, researchers have conducted a range of analyses on the excavated items, including carbon dating, DNA sequencing, and other tests.
+            </p>
+            <p>
+                Our project is organized using a grid system that defines squares by their coordinates from an origin point (North, East, South, and West). Squares are further subdivided into quadrants (Northwest, Northeast, Southeast, Southwest), and each burial is assigned a unique identifier based on its location within the grid.
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <p>
+            As the amount and diversity of data associated with this excavation have grown, we have identified a few challenges and opportunities. This website aims to address these by:
+        </p>
+        <div class="col-md-4">
+            <div class="goal">
+                <h3>Goal #1</h3>
+                <p>Further organizing the data and providing an accessible platform for researchers and interested individuals worldwide to explore and learn about the project.</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="goal">
+                <h3>Goal #2</h3>
+                <p>Enabling the research team to view, filter, and query the data in various ways to answer a wide range of academic research questions.</p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="goal">
+                <h3>Goal #3</h3>
+                <p>Leveraging advanced analytical and machine learning techniques to predict, explain, and visualize the wealth of data, fostering deeper insights.</p>
+            </div>
+        </div>
+    </div>
 </div>
