--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <header class="header">
     <h1 class="display-4">Fag el-Gamous Excavation Project</h1>
     <p class="lead">Discover the fascinating world of the Fag el-Gamous mummies and explore the wealth of data collected during over 25 years of archeological investigation.</p>
-    <a class="cta-button" href="your-link-to-burial-information-page" role="button">View Burial Information</a>
+    <a class="cta-button" asp-controller="Home" asp-action="Data" role="button">View Burial Information</a>
 </header>
 <div class="container">
     <div class="row">
