--- a/Views/Home/UnsupervisedAnalysis.cshtml
+++ b/Views/Home/UnsupervisedAnalysis.cshtml
@@ -1,6 +1,16 @@
-@{
-    ViewData["Title"] = "Unsupervised";
-}
+@{ ViewData["Title"] = "Unsupervised Analysis"; }
 <h1>@ViewData["Title"]</h1>
 
-<p>Unsupervised Analysis Page</p>
+<p>In our review of the data provided to us by the team at Fag el-Gamous, we conclude that there is no evidence supporting their working hypothesis that burial practices changed over time.</p>
+
+<h4>A Comparison of depth, headdirection, and material</h4>
+<img src="~/img/Depth-Headdirection-Material.png" /><br />
+<p>This 3D scatterplot shows a slight trend that could indicate that the newer (less deep) the burial, the more likely the head direction would be west facing.</p>
+
+<h4>A Comparison of depth, manipulation, and headdirection</h4>
+<img src="~/img/Depth-Manipulation-Headdirection.png" /><br />
+<p>In this 3D scatterplot it is hard to see and conclusive trends at all.</p>
+
+<h4>A Comparison of depth, ageatdeath, and material</h4>
+<img src="~/img/Depth-Material-Ageatdeath.png" /><br />
+<p>This 3D scatterplot has a very slight trend showing that the newer (less deep) the burial, the more likely the person was to be buried with linen textiles.</p>
