--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -123,7 +123,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="">
         <div class="container">
             &copy; 2023 - INTEX
         </div>
