--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,9 @@
 @{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "CreateUser";
 }
 
+
+@model INTEX.Models.CreateUserViewModel
 <header class="header">
     <h1 class="display-4">Fag el-Gamous Excavation Project</h1>
     <p class="lead">Discover the fascinating world of the Fag el-Gamous mummies and explore the wealth of data collected during over 25 years of archeological investigation.</p>
