--- a/Views/Admin/Users.cshtml
+++ b/Views/Admin/Users.cshtml
@@ -2,23 +2,42 @@
     ViewData["Title"] = "Users";
 }
 
+
 @model INTEX.Models.UserListModel
 
-<table>
-    <thead>
-        <tr>
-            <th>Username</th>
-            <th>Email</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var user in Model.Users)
-        {
-            <tr>
-                <td>@user.UserName</td>
-                <td>@user.Email</td>
-            </tr>
-        }
-    </tbody>
-</table>
 
+<div class="container mt-4">
+    <div class="row mb-3">
+        <div class="col">
+            <h2>Users</h2>
+        </div>
+        <div class="col text-end">
+            <a href="@Url.Action("Create", "Admin")" class="btn btn-primary">Add New User</a>
+        </div>
+    </div>
+
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Username</th>
+                <th>Email</th>
+                <th>Role</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var user in Model.Users)
+            {
+                <tr>
+                    <td>@user.UserName</td>
+                    <td>@user.Email</td>
+                    <td>@Model.UserRoles[user.Id]</td>
+                    <td>
+                        <a href="@Url.Action("Edit", "Admin", new { id = user.Id })" class="btn-primary">Edit</a>
+                        <a href="@Url.Action("Delete", "Admin", new { id = user.Id })" class="btn btn-danger">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
