--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using INTEX
 @using INTEX.Models
+@using Microsoft.AspNetCore.Identity
+@using System.Threading.Tasks
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
