--- a/Views/Shared/MyNewLayout.cshtml
+++ b/Views/Shared/MyNewLayout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -88,7 +88,7 @@
 
 
     <!-- FOR HIGHLIGHTING THE ROWS IN THE DATA TABLE -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!--<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>$(document).ready(function () {
             $('tr').hover(
                 function () {
@@ -102,7 +102,7 @@
             $('tr').click(function () {
                 window.location.href = "your_link_here";
             });
-        });</script>
+        });</script>-->
 
 </head>
 <body>
@@ -135,8 +135,8 @@
         </nav>
     </header>
 
-    <div class="container">
-        <main role="main" class="pb-4">
+    <div class="">
+        <main role="main" class="pb-5">
             @RenderBody()
         </main>
     </div>
