--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -102,3 +102,13 @@ body {
     background-color: #337ab7;
     border-color: #2e6da4;
 }
+
+.highlight-row:hover {
+    background-color: whitesmoke;
+    cursor: pointer;
+}
+
+tr:hover {
+    background-color: #f5f5f5; /* Light gray */
+}
+
