--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -125,7 +125,10 @@
 
     <footer class="border-top footer text-muted" style="padding: 0.5rem 0;">
         <div class="container" style="font-size: 0.8rem; line-height: 1;">
-            &copy; 2023 - INTEX
+            &copy; 2023 - INTEX |
+            <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy Policy</a> |
+            <a asp-area="" asp-controller="Home" asp-action="EgyptLaw">Egypt Data Laws</a>
+
         </div>
     </footer>
 
