--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using INTEX
 @using INTEX.Models
+@using Microsoft.AspNetCore.Identity
+@using System.Threading.Tasks
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, INTEX
 @using INTEX.Models.ViewModels
